backweb2/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backweb2-v10
  labels:
    app: backweb2
    version: v10
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: backweb2
      version: v10
  template:
    metadata:
      labels:
        app: backweb2
        version: v10
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: backweb2-v10
          image: image-registry.openshift-image-registry.svc:5000/demo/backweb2:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
