backweb2/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: backweb2
spec:
  selector:
    app: backweb2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
