backweb2/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backweb2
spec:
  host: backweb2
  subsets:
  - name: v1
    labels:
      version: v10
