backweb2/DestinationRule_v11.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backweb2
spec:
  host: backweb2
  subsets:
  - name: v10
    labels:
      version: v10
  - name: v11
    labels:
      version: v11
