backweb2/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backweb2
spec:
  hosts:
  - backweb2
  http:
  - route:
    - destination:
        host: backweb2
        subset: v10
